2004-04-23 08:14  PeterB

	* src/balsa-mblist.c: split message (bug #116604).

2004-04-20  Pawel Salek

	* libbalsa/libbalsa.c: no-SSL build fixes.
	* libbalsa/send.c: libesmtp-1.0.3 release delayed.

2004-04-21 12:42  PeterB

	* libbalsa/mailbox_imap.c: map IMBENC_OTHER to
	GMIME_PART_ENCODING_DEFAULT.
	* src/: balsa-mblist.c, main-window.c: use ngettext--fix for bug
	#116604.
	* libbalsa/message.c: libbalsa_message_set_headers_from_string sets
	all headers again.

2004-04-20  Pawel Salek

	* libbalsa/libbalsa.[hc]: unify SMTP/IMAP/POP certificate management.
	* libbalsa/send.c: support better SMTP TLS (requires libesmtp-1.0.3).
	* libbalsa/server.[hc]: simplify.
	* src/main-window.c: respect "Cancel" button.
	* libbalsa/gmime-gpgme-context.c: pass name (Albrecht Dress).

2004-04-20 15:44  PeterB

	* libbalsa/message.c: don't add to user_hdrs when processing basic
	headers.
	* src/message-window.c: set title bar when message is set.
	* src/balsa-message.c: check GMIME_IS_PART(info->body->mime_part).
	* libbalsa/gmime-part-rfc2440.c: check for empty content.
	* libbalsa/filter.c, libbalsa/mailbox.c, libbalsa/mailbox.h,
	libbalsa/mailbox_local.c, src/balsa-index.c, src/main-window.c:
	check messages against view-filter after filtering; allow NULL
	condition and search-iter.

2004-04-20 00:30  PeterB

	* libbalsa/message.c: clear message->has_all_headers when extra
	headers are destroyed.
	* libbalsa/message.c: don't add standard headers to user_hdrs.

2004-04-19  Pawel Salek

	* libbalsa/filter.c: update argument list of message_body_ref().
	* libbalsa/send.c: ditto.
	* libbalsa/mailbox_imap.c: correctly fetch-headers on fetch-struct.
	* libbalsa/mailbox_local.c: ditto.
	* libbalsa/mailbox_mbox.c: set message length.
	* libbalsa/message.[ch]: fetch msg structure and headers in one shot.
	* src/balsa-message.c: update argument list of message_body_ref().
	* src/{sendmsg-window,print}.c: ditto.
	* libbalsa/mailbox.c: make sure not to break group-reply.
